# my_compiler

./: CMakeLists.txt  RAEDME.md  README.md  TODO_LIST.md  \  expected_sources.txt  headers.txt  sources.txt
.cache/clangd/index/: basic_node.cpp.A757EC859D5395DF.idx  basic_node.hpp.D20F7CF47A415D0C.idx  binary_expr.cpp.C426ACD202C9B2A7.idx  binary_expr.hpp.8DCCCD311F1D3680.idx  block_stat_node.cpp.5C28C5334564821C.idx  block_stat_node.hpp.201534A6FFBCED6A.idx  break_stat_node.cpp.448AB0A48B397484.idx  break_stat_node.hpp.7C27298FB286B520.idx  change_variable_value_stat_node.cpp.01BF9F736F3FC9D7.idx  change_variable_value_stat_node.hpp.6E4F93E2FBC37E22.idx  comment_type.hpp.4A67F59C92DBAF38.idx  condition_expr_node.cpp.9269E4CCFBF95D3B.idx  condition_expr_node.hpp.D61363A47ECD6957.idx  constant_type.hpp.9339982559521B73.idx  continue_stat_node.cpp.172540FC1700A956.idx  continue_stat_node.hpp.06E2FC568470EE90.idx  decl_node.cpp.82BA8C91A383C15E.idx  decl_node.hpp.7ED393315396BB31.idx  else_stat_node.cpp.7E126C635C17AD50.idx  else_stat_node.hpp.6CF7EE2FFDE6DA64.idx  eof_or_illegal_type.hpp.285E06D53ADDF7CD.idx  expr_node.cpp.66231CD8EF8682F6.idx  expr_node.hpp.0337EC3A4181D1A2.idx  expression_stat_node.cpp.0FD94B62BA45BE5E.idx  expression_stat_node.hpp.4F02738D58F4B967.idx  for_stat_node.cpp.6B2CAD6B7B00E978.idx  for_stat_node.hpp.4667FB488115B72B.idx  function_called_return_value_expr_node.cpp.DE3E2EA779C3E82E.idx  function_called_return_value_expr_node.hpp.27BF21531AA4B80F.idx  function_decl_node.cpp.D6BAFD747315EFDD.idx  function_decl_node.hpp.867B128CC7ED5768.idx  function_decl_stat_node.cpp.1C0D2BEA1935BCED.idx  function_decl_stat_node.hpp.1C911FC58131BE9F.idx  group_expr_node.cpp.27F52FD7F9FE7B97.idx  group_expr_node.hpp.A9AA9D3353589D37.idx  ident_expr_node.cpp.FD8B9DE5C3622F78.idx  ident_expr_node.hpp.2FE41D0F6ABAD356.idx  ident_type.hpp.BA6C234C425529C3.idx  if_stat_node.cpp.7BA0AD49239E8A7C.idx  if_stat_node.hpp.49BC1173956E56D8.idx  (+90 more)
include/ast_node/: README.md  ast_node.hpp  basic_node.hpp  delc_node.hpp  node_type.hpp  note.md  root_node.hpp
include/ast_node/decl_node/: class_decl_node.hpp  decl_node.hpp  enum_decl_node.hpp  func_decl_node.hpp  function_decl_node.hpp  lambda_decl_node.hpp  namespace_decl_node.hpp  var_decl_node.hpp  variable_decl_node.hpp
include/ast_node/expr_node/: binary_expr.hpp  condition_expr_node.hpp  expr_node.hpp  function_called_return_value_expr_node.hpp  group_expr_node.hpp  ident_expr_node.hpp  literal_expr_node.hpp  note.md  pratt_parser.hpp  tenary_expr_node.hpp  unary_expr_node.hpp
include/ast_node/stat_node/: block_stat_node.hpp  break_stat_node.hpp  case_stat_node.hpp  change_variable_value_stat_node.hpp  continue_stat_node.hpp  default_stat_node.hpp  do_while_stat_node.hpp  else_stat_node.hpp  empty_stat_node.hpp  expr_stat_node.hpp  expression_stat_node.hpp  for_stat_node.hpp  function_decl_stat_node.hpp  if_stat_node.hpp  parameter_list_stat_node.hpp  parameter_stat_node.hpp  return_stat_node.hpp  self_change_stat_node.hpp  single_stat_node.hpp  stat_list_node.hpp  stat_node.hpp  switch_stat_node.hpp  variable_decl_stat_node.hpp  void_stat_node.hpp  while_stat_node.hpp
include/ast_node/terminal_symbols/: terminal_break.hpp  terminal_continue.hpp  terminal_else.hpp  terminal_equal.hpp  terminal_for.hpp  terminal_func.hpp  terminal_ident_literal.hpp  terminal_if.hpp  terminal_let.hpp  terminal_operator.hpp  terminal_return.hpp  terminal_separator.hpp  terminal_switch.hpp  terminal_value_literal.hpp  terminal_while.hpp
include/file_reader/: reader.hpp
include/lexer/: README.md  keyword_pool.hpp  lexer.hpp  lexer_helper_functions.hpp  operator_pool.hpp  remind.md  separator_pool.hpp
include/token/: README.md  comment_type.hpp  constant_type.hpp  eof_or_illegal_type.hpp  ident_type.hpp  keyword_type.hpp  operator_type.hpp  preprocessor.hpp  separator_type.hpp  token.hpp  token_helper_functions.hpp  token_type.hpp
src/ast_node/: ast_node.cpp  basic_node.cpp  node_type.cpp  note.md  root_node.cpp
src/ast_node/decl_node/: class_decl_node.cpp  decl_node.cpp  enum_decl_node.cpp  func_decl_node.cpp  function_decl_node.cpp  lambda_decl_node.cpp  literal_expr_node.cpp  namespace_decl_node.cpp  var_decl_node.cpp  variable_decl_node.cpp
src/ast_node/expr_node/: binary_expr.cpp  condition_expr_node.cpp  expr_node.cpp  function_called_return_value_expr_node.cpp  group_expr_node.cpp  ident_expr_node.cpp  literal_expr_node.cpp  pratt_parser.cpp  tenary_expr_node.cpp  unary_expr_node.cpp
src/ast_node/stat_node/: block_stat_node.cpp  break_stat_node.cpp  (+23 more)
src/file_reader/: reader.cpp
src/lexer/: keyword_pool.cpp  lexer.cpp  lexer_helper_functions.cpp  operator_pool.cpp  separator_pool.cpp
src/token/: token.cpp  token_helper_functions.cpp
test/ast_node/: CMakeLists.txt  run_independent_tests.sh  run_tests.sh  test_ast_node_comprehensive.cpp  test_ast_node_position.cpp  test_ast_node_position_comprehensive.cpp  test_ast_node_position_simple.cpp  test_ast_node_position_standalone.cpp  test_ast_node_types_position.cpp  test_basic_node.cpp  test_binary_expr_node.cpp  test_block_stat_node.cpp  test_decl_node.cpp  test_expr_node.cpp  test_func_decl_node.cpp  test_ident_expr_node.cpp  test_if_stat_node.cpp  test_literal_expr_node.cpp  test_return_stat_node.cpp  test_stat_node.cpp  test_var_decl_node.cpp
test/file_reader/: CMakeLists.txt  run_tests.sh  test_file_reader.cpp
test/lexer/: CMakeLists.txt  CMakeLists_separator.txt  source_code.dylan  test_lexer.cpp  test_lexer_comment.cpp  test_lexer_comprehensive.cpp  test_lexer_debug.cpp  test_lexer_position.cpp  test_lexer_position_comprehensive.cpp  test_lexer_separator.cpp  test_lexer_simple.cpp  test_separator.cpp
test/lexer/build_debug/: CMakeCache.txt  Makefile  TestLexerDebug  cmake_install.cmake
test/lexer/build_separator/: CMakeCache.txt  Makefile  TestSeparator  cmake_install.cmake
test/token/: CMakeLists.txt  test_token.cpp  test_token_class.cpp  test_token_helper_functions.cpp  test_token_position.cpp  test_token_position_comprehensive.cpp  test_token_types.cpp
(+15 files in other folders)
